--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #bcd1c2;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
